--- a/socket/index.html
+++ b/socket/index.html
@@ -1,8 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+</head>
+<body>
+
+<img src="/static/files/1.jpg">
+
 <script src="/socket.io-client/dist/socket.io.js"></script>
 <script>
   var socket = io.connect('http://localhost:3000');
-  socket.on('news', function (data) {
+  socket.on('aaa', function (data) {
     console.log(data);
-    socket.emit('my other event', { my: 'data' });
   });
 </script>
+</body>
+</html>
